--- a/auction-service/package.json
+++ b/auction-service/package.json
@@ -16,10 +16,11 @@
   },
   "dependencies": {
     "@middy/core": "^1.5.2",
-    "@middy/http-error-handler": "^1.5.2",
     "@middy/http-event-normalizer": "^1.5.2",
     "@middy/http-json-body-parser": "^1.5.2",
+    "@middy/validator": "^1.5.2",
     "aws-sdk": "^2.639.0",
+    "middy-middleware-json-error-handler": "^2.0.6",
     "uuid": "^8.3.2"
   }
 }
